--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
+		<!-- Instructs the browser on how to control the dimensions and scaling (had to add it to make media queries work) -->
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<title>Temaoppgave 4</title>
 	</head>
